# CAOS

0/: 1.sh  11.sh  12.sh  2.sh  solution
0/3/: Makefile  a.out  compile.conf  solution1.cpp
FUSE/0/: 0.3.c  0.c  CMakeLists.txt  build.sh  main
I/1/: 1.S  Makefile  main
I/2/: main  main.c
II/0/: 0.S
II/1/: main.S
II/2/: input.txt  main.S
II/3/: a.out  main  test.py
II/test/: andrew.S
III/0/: a.out
III/1/: a.out
III/2/: main  test.py
IV/0/: input.txt  main  output.txt
IV/1/: 1.c  main  make_test.py
IV/2/: 2  2.2  main  make_test.py  read_ans.py
IV/3/: make_test.py
tech01/1/: gauss.py  input.txt  input_bad.txt
tech01/3/: 3.sh  solution.c  zip.sh
tech02-I/: 0.S
tech02-I/1/: 1.c  main.c
tech02-I/2/: 2.S  Makefile
tech02-II/1/: main
tech02-II/2/: main
tech02-II/3/: input.txt  main.S
tech02-II/test/: andrew2.S  out.txt
tech02-III/0/: 0.c
tech02-III/1/: 1.c
tech02-III/2/: 2.c  22.c  eng.txt
tech03/0/: 0.c  output2.txt
tech03/1/: 1  1 copy.c  1.c  input.txt  make_test.py
tech03/2/: 2.2.c  2.c  make_test.py  read_ans.py  test.py
tech03/3/: 3.c  artyom.c
tech04/0/: 0  0.c
tech04/1/: 1  1.c  fake.sh
tech04/2/: 2  2.c
tech04/3/: 3  3.c  a.out  input.txt  link_to_2  my
tech05/0/: 0  0.c  input.txt
tech05/1/: 1  1.c
tech05/2/: 2  2.c
tech05/3/: 3  3.c  3_temp  3_temp.c  data.txt
tech06/0/: 0  0.c
tech06/1/: 1  1.c
tech06/2/: 2  2.2.c  2.c  input.txt  test.py
tech07/0/: 0  0.c
tech07/1/: 1  1.c  test
tech07/2/: 2  2.2  2.2.c  2.3  2.3.c  2.c  ent.txt  out.txt  script.py  test.py
tech08/0/: 0  0.c
(+75 files in other folders)
